name:                mosquitto-conduit
version:             0.1.0.0
synopsis:            mosquitto conduit
description:         Conduits for mosquitto
homepage:            http://github.com/uwitty/mosquitto-conduit#readme
license:             MIT
license-file:        LICENSE
author:              uwitty
maintainer:          uyuwitty@gmail.com
copyright:           (c) 2016 uwitty
category:            Conduit
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Mosquitto
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , resourcet
                     , conduit
                     , mosquitto
  default-language:    Haskell2010

executable publish
  hs-source-dirs:      example
  main-is:             Publish.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , bytestring
                     , resourcet
                     , conduit
                     , mosquitto
                     , mosquitto-conduit
  default-language:    Haskell2010

executable subscribe
  hs-source-dirs:      example
  main-is:             Subscribe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , bytestring
                     , resourcet
                     , conduit
                     , mosquitto
                     , mosquitto-conduit
  default-language:    Haskell2010

test-suite mosquitto-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mosquitto-conduit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mosquitto-conduit
